--- a/apps/ninjagold_app/templates/ninjagold_app/index.html
+++ b/apps/ninjagold_app/templates/ninjagold_app/index.html
@@ -11,27 +11,33 @@
 </head>
 <body>
     <div class="wrapper">   
-        <h1>Ninja Gold</h1>   
-        <p>Your Gold:  <span class="your-gold">0</span></p>
-        <form action='/process' method='post'>
+        <h1>Ninja Gold</h1>
+        <div class="header">
+            <p>Your Gold:  <span class="your-gold">{{request.session.gold}}</span></p><form
+            action='/reset/' method='post'class="reset">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Reset</button>
+            </form>
+        </div>
+        <form action='/process/farm/' method='post'>
             {% csrf_token %}
             <h2>Farm</h2>
             <p>(earns 10-20 golds)</p>
             <button type="submit" class="btn btn-success">Find Gold!</button>
         </form><form
-         action='/process' method='post'>
+         action='/process/cave/' method='post'>
             {% csrf_token %}
             <h2>Cave</h2>
             <p>(earns 5-10 golds)</p>
             <button type="submit" class="btn btn-success">Find Gold!</button>
         </form><form
-         action='/process' method='post'>
+         action='/process/house/' method='post'>
             {% csrf_token %}
             <h2>House</h2>
             <p>(earns 2-5 golds)</p>
             <button type="submit" class="btn btn-success">Find Gold!</button>
         </form><form
-         action='/process' method='post'>
+         action='/process/casino/' method='post'>
             {% csrf_token %}
             <h2>Casino</h2>
             <p>(earns/takes 0-50 golds)</p>
@@ -39,7 +45,9 @@
         </form>
         <p class="act-header">Activities:</p>
         <div class="activities">
-
+            {% for activity in request.session.activities %}
+                <p class="{{activity.class}}">{{activity.content}}</p>
+            {% endfor %}
         </div>
     </div>
 </body>
